http/compile_errors_v9.txt
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:17:71
   |
17 | ...cManifest, StaticNode, StaticStat...
   |               ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:18:5
   |
18 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:18:21
   |
18 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

warning: `ranvier-core` (lib) generated 3 warnings
    Checking ranvier-http v0.12.0 (F:\project\ranvier\ranvier-workspace\ranvier\http)
warning: unused imports: `BoxBody` and `UnsyncBoxBody`
 --> http\src\sse.rs:3:35
  |
3 | use http_body_util::combinators::{BoxBody, UnsyncBoxBody};
  |                                   ^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Full`
 --> http\src\sse.rs:4:31
  |
4 | use http_body_util::{BodyExt, Full};
  |                               ^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:2453:40
     |
2453 | impl<R> Service<Request<Incoming>> for RawIngressService<R>
     |                                        ^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:1933:52
     |
1933 |     pub fn into_raw_service(self, resources: R) -> RawIngressService<R> {
     |                                                    ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:1941:9
     |
1941 |         RawIngressService {
     |         ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
  --> http\src\test_harness.rs:11:35
   |
11 | use crate::ingress::{HttpIngress, RawIngressService};
   |                                   ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
  --> http\src\test_harness.rs:43:14
   |
43 |     service: RawIngressService<R>,
   |              ^^^^^^^^^^^^^^^^^

error[E0382]: use of moved value: `accept_encoding`
    --> http\src\ingress.rs:2303:48
     |
2265 |     let Some(accept_encoding) = accept_encoding else {
     |              --------------- move occurs because `accept_encoding` has type `HeaderValue`, which does not implement the `Copy` trait
...
2290 |         .insert(http::header::ACCEPT_ENCODING, accept_encoding);
     |                                                --------------- value moved here
...
2303 |         .insert(http::header::ACCEPT_ENCODING, accept_encoding);
     |                                                ^^^^^^^^^^^^^^^ value used here after move
     |
help: consider cloning the value if the performance cost is acceptable
     |
2290 |         .insert(http::header::ACCEPT_ENCODING, accept_encoding.clone());
     |                                                               ++++++++

error[E0382]: use of moved value: `response`
    --> http\src\ingress.rs:2307:19
     |
2257 |     response: RanvierResponse,
     |     -------- move occurs because `response` has type `Response<BoxBody<bytes::Bytes, Infallible>>`, which does not implement the `Copy` trait
...
2269 |     let (parts, body) = response.into_parts();
     |                                  ------------ `response` moved due to this method call
...
2307 |         Err(_) => response,
     |                   ^^^^^^^^ value used here after move
     |
note: `Response::<T>::into_parts` takes ownership of the receiver `self`, which moves `response`
    --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\http-1.4.0\src\response.rs:447:23
     |
 447 |     pub fn into_parts(self) -> (Parts, T) {
     |                       ^^^^
help: you could `clone` the value and consume it, if the `BoxBody<bytes::Bytes, Infallible>: Clone` trait bound could be satisfied
     |
2269 |     let (parts, body) = response.clone().into_parts();
     |                                 ++++++++

error[E0382]: use of moved value: `response`
    --> http\src\ingress.rs:2307:19
     |
2257 |     response: RanvierResponse,
     |     -------- move occurs because `response` has type `Response<BoxBody<bytes::Bytes, std::convert::Infallible>>`, which does not implement the `Copy` trait
...
2269 |     let (parts, body) = response.into_parts();
     |                                  ------------ `response` moved due to this method call
...
2307 |         Err(_) => response,
     |                   ^^^^^^^^ value used here after move
     |
note: `Response::<T>::into_parts` takes ownership of the receiver `self`, which moves `response`
    --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\http-1.4.0\src\response.rs:447:23
     |
 447 |     pub fn into_parts(self) -> (Parts, T) {
     |                       ^^^^
help: you could `clone` the value and consume it, if the `BoxBody<bytes::Bytes, std::convert::Infallible>: Clone` trait bound could be satisfied
     |
2269 |     let (parts, body) = response.clone().into_parts();
     |                                 ++++++++

warning: use of deprecated field `ingress::RawIngressService::routes`: Internal service type
    --> http\src\ingress.rs:1942:13
     |
1942 |             routes,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::fallback`: Internal service type
    --> http\src\ingress.rs:1943:13
     |
1943 |             fallback,
     |             ^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::layers`: Internal service type
    --> http\src\ingress.rs:1944:13
     |
1944 |             layers,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::health`: Internal service type
    --> http\src\ingress.rs:1945:13
     |
1945 |             health,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::static_assets`: Internal service type
    --> http\src\ingress.rs:1946:13
     |
1946 |             static_assets,
     |             ^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::resources`: Internal service type
    --> http\src\ingress.rs:1947:13
     |
1947 |             resources,
     |             ^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::routes`: Internal service type
    --> http\src\ingress.rs:2469:22
     |
2469 |         let routes = self.routes.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::fallback`: Internal service type
    --> http\src\ingress.rs:2470:24
     |
2470 |         let fallback = self.fallback.clone();
     |                        ^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::layers`: Internal service type
    --> http\src\ingress.rs:2471:22
     |
2471 |         let layers = self.layers.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::health`: Internal service type
    --> http\src\ingress.rs:2472:22
     |
2472 |         let health = self.health.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::static_assets`: Internal service type
    --> http\src\ingress.rs:2473:29
     |
2473 |         let static_assets = self.static_assets.clone();
     |                             ^^^^^^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::resources`: Internal service type
    --> http\src\ingress.rs:2474:25
     |
2474 |         let resources = self.resources.clone();
     |                         ^^^^^^^^^^^^^^

warning: unused import: `futures_util::StreamExt`
   --> http\src\extract.rs:406:5
    |
406 | use futures_util::StreamExt;
    |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `req`
   --> http\src\ingress.rs:806:55
    |
806 |         let handler: RouteHandler<R> = Arc::new(move |req: Request<Incoming>, res: &R| {
    |                                                       ^^^ help: if this is intentional, prefix it with an underscore: `_req`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `route_bus_injectors`
    --> http\src\ingress.rs:1550:17
     |
1550 |             let route_bus_injectors = route_bus_injectors.clone();
     |                 ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_route_bus_injectors`

For more information about this error, try `rustc --explain E0382`.
warning: `ranvier-http` (lib) generated 22 warnings
error: could not compile `ranvier-http` (lib) due to 2 previous errors; 22 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `ranvier-http` (lib test) generated 22 warnings (22 duplicates)
error: could not compile `ranvier-http` (lib test) due to 2 previous errors; 22 warnings emitted
